k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: services
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
